--- a/Home.html
+++ b/Home.html
@@ -25,10 +25,10 @@
                 <div class="nav">
                     <ul>
                         <li><a class="menu_hover" href="Home.html">Home</a></li>
-                        <li><a class="menu_hover" href="storyroom.html">Story Rooms</a></li>
-                        <li><a class="menu_hover" href="storygarden.html">Story Gardens</a></li>
-                        <li><a class="menu_hover" href="gallery.html">Gallery</a></li>
-                        <li><a class="menu_hover" href="Contact.html">Contact Us</a></li>
+                        <li><a class="menu_hover" href="html/storyroom.html">Story Rooms</a></li>
+                        <li><a class="menu_hover" href="html/storygarden.html">Story Gardens</a></li>
+                        <li><a class="menu_hover" href="html/gallery.html">Gallery</a></li>
+                        <li><a class="menu_hover" href="html/Contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="toggle-btn">
@@ -126,7 +126,6 @@
 			<p class="copyright">Copyright © 2023 London Council</p>
 		</div>
 	</footer>
-	  
-  <script type="text/javascript" src="js/home.js"></script>
   </body>
+  <script type="text/javascript" src="js/home.js"></script>
 </html>
